# automaker

./: .commands.md  .env.example  .gitignore  CLAUDE.md  DISCLAIMER.md  FEATURE-STRATEGY.md  package-lock.json  package.json  plan-audit-report.md  plan-execution-report.md  remaining-issues-fix-plan.md  start-automaker.sh
2.ai-library/: .gitignore  AGENTS.md  DATABASE-STRUCTURE.md  README.md  SETUP.md  pyproject.toml  requirements.txt  start-api.sh  start-with-automaker.sh
2.ai-library/Docs/: OAUTH-INVESTIGATION-2026-01-27.md  WORKFLOW_DOCUMENTATION.md  multi-developer-vector-database-architecture.md
2.ai-library/configs/: settings.yaml
2.ai-library/scripts/: refresh-oauth-token.sh
2.ai-library/src/: config.py
2.ai-library/tests/: conftest.py  test_api.py  test_client_json.py  test_config.py  test_conversation.py  test_conversation_index.py  test_cors.py  test_execution.py  test_library_scanner.py  test_merge.py  test_models.py  test_payloads.py  test_planning_flow.py  test_prompts.py  test_retriever.py  test_run_api.py  test_sdk_client.py  test_security_repro.py  test_semantic_search.py  test_session.py  test_similarity.py  test_websocket_stream.py
5.Knowledge Server/: .auto-claude-security.json  .bandit  .claude_settings.json  .dockerignore  .env.example  .gitignore  .ruff.toml  CHANGELOG.md  Dockerfile  IMPLEMENTATION-PLAN-DOMAINS.md  README.md  docker-compose.deploy.yml  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt
5.Knowledge Server/System-Overview/: 01-MCP-TOOLS.md  02-DATABASE-SCHEMA.md  03-ARCHITECTURE.md  04-ALGORITHMS.md  05-CONFIDENCE-SCORING.md  CRITICAL-ISSUES-FOUND.md  Future improvements and recommendations.md  Issue-List.md  Known-Issues.md  MCP_TOOLS_ANALYSIS.md  PRD.md  README.md  STARTUP.md  TOOL_IMPLEMENTATION_SUMMARY.txt  parallelization-plan.md
5.Knowledge Server/config/: __init__.py  domains.py  settings.py  testing.py
5.Knowledge Server/deployment/: mcp-knowledge-server.service
5.Knowledge Server/docs/: BACKUP_AND_RESTORE.md  CI-CD-PIPELINE.md  CI-CD-QUICK-REFERENCE.md  CLAUDE_DESKTOP_SETUP.md  CLEANUP_GUIDE.md  CURRENT_ISSUES.md  Certainty score system upgrade.md  DATABASE_CLEANUP.md  DEFERRED_ISSUES.md  Future-Features.md  MCP_KNOWLEDGE_SERVER_COMPLETE_GUIDE.md  MCP_KNOWLEDGE_SERVER_LLM_GUIDE.md  MONITORING_GUIDE.md  REDIS_SETUP.md  fix-test-failures-prompt.md  pre-existing-test-failures.md
5.Knowledge Server/models/: events.py
5.Knowledge Server/monitoring/: health_check.py  resource_monitor.py  service_monitor.sh
5.Knowledge Server/plans/: README.md  phase-4-error-handling.md  phase-5-test-organization.md  phase-6-documentation.md
5.Knowledge Server/projections/: __init__.py  base_projection.py  chromadb_projection.py  neo4j_projection.py
5.Knowledge Server/scripts/: backfill_confidence_scores.py  check_confidence_properties.py  cleanup_databases.py  cleanup_duplicates.py  cleanup_old_properties.py  cleanup_redis.py  cleanup_repository.py  confidence_properties_data.json  deploy_local.sh  execute_backend_tests.py  generate_initial_scores.py  generate_test_reports.py  init_chromadb.py  init_database.py  init_neo4j.py  migrate_add_unique_constraint.py  migrate_certainty_to_confidence.py  production_setup.sh  production_start.sh  rollback_local.sh  run_backend_tests_inline.py  run_tests_batched.py  smoke_tests.py  start_mcp_server.bat  start_mcp_server.sh  start_redis.sh  test_all_tools.py  update_confidence_schema.py  validate_confidence_scores.py  verify_automated_scoring.py  verify_concept_scoring.py  verify_confidence_fix.py  verify_confidence_scoring.py  verify_null_pointer_issues.py
5.Knowledge Server/services/: __init__.py  chromadb_service.py  compensation.py  consistency_checker.py  container.py  embedding_cache.py  embedding_service.py  event_store.py  neo4j_service.py  outbox.py  repository.py
5.Knowledge Server/test-phases/: PHASE-1-Foundation-and-Basic-Concepts.md  PHASE-2-Search-and-Discovery.md  PHASE-3-Relationship-Management.md  PHASE-4-Analytics-and-System-Management.md  README.md  TEST-REPORT-TEMPLATE.md  TEST-SUITE-OVERVIEW.md
5.Knowledge Server/tests/: conftest.py  test_acceptance_criteria.py  test_analytics_tools.py  test_chromadb_integration.py  test_chromadb_projection.py  test_chromadb_service.py  test_compensation.py  test_compensation_e2e.py  test_compensation_integration.py  test_concept_source_urls.py  test_concept_tools.py  test_concurrent_model_loading.py  test_consistency_checker.py  test_critical_bugs.py  test_cypher_injection_security.py  test_embedding_cache.py  test_embedding_cache_integration.py  test_embedding_edge_cases.py  test_embedding_integration.py  test_embedding_service.py  test_error_handling.py  test_event_store.py  test_integration.py  test_list_areas_tool.py  test_mcp_integration.py  test_mcp_resources.py  test_mcp_server_source_urls.py  test_memory_leaks.py  test_neo4j_projection.py  test_neo4j_projection_integration.py  test_neo4j_service.py  test_null_confidence_score_fix.py  test_outbox.py  test_outbox_race_condition_fix.py  test_real_world_integration.py  test_relationship_tools.py  test_relationship_tools_advanced.py  test_repository.py  test_repository_integration.py  test_score_conversion.py  (+4 more)
5.Knowledge Server/tools/: analytics_tools.py  concept_tools.py  relationship_tools.py  responses.py  search_tools.py  service_utils.py
6.Short-Term-Memory-MCP/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI-CD-HANDOFF-REMAINING-FAILURES.md  CI-CD-QUICK-START.md  CI-CD-ROOT-CAUSE-ANALYSIS.md  CLAUDE.md  PRD-Short-Term-Memory-MCP.md  README.md  Session-System-Prompts-Guide.md  TEST-FAILURE-ROOT-CAUSE-ANALYSIS.md  TROUBLESHOOTING-GUIDE.md  add_semaphores.py  fix_indentation.py  pyproject.toml  requirements.txt  run_perf_tests.py  session_implementation_report.json  update_tools_async.py
6.Short-Term-Memory-MCP/ System overview/: API-Complete.md  API-Documentation.md  Claude-Sessions.md  Code-Teacher-API.md  FIX-TRACKER.md  PRD-Short-Term-Memory-MCP.md  Production-Guide.md  Session-System-Prompts-Guide.md  TROUBLESHOOTING-GUIDE.md
(+760 files in other folders)
