[project]
name = "mcp-knowledge-server"
version = "0.1.0"
description = "MCP server for AI-powered knowledge management with dual storage (Neo4j + ChromaDB)"
authors = [{name = "Ruben", email = "your-email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.2.0",
    "python-dotenv>=1.0.0",
    "redis[asyncio]>=5.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "psutil>=5.9.0",
]
mistral = ["mistralai>=1.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["services", "tools", "projections", "models", "monitoring"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires external services)",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/test_*", ".venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# =============================================================================
# Code Quality Tools Configuration (for CI/CD Pipeline)
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.pytest_cache
  | \.mypy_cache
  | \.ruff_cache
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["services", "tools", "projections", "models", "monitoring"]
skip_glob = [
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
exclude = [
    '^\.venv/',
    '^build/',
    '^dist/',
    '^tests/',
]

[dependency-groups]
dev = [
    "redis>=7.0.1",
]
